# demo_app

./: Cargo.toml
src/: main.rs  middleware.rs  settings.rs  urls.rs
src/apps/core/: mod.rs  models.rs  urls.rs  views.rs
templates/: base.html  home.html
