[package]
name = "demo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
cobalto = { path = "../cobalto" }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.8"
log = "0.4"
once_cell = "1.21.3"
async-trait = "0.1.88"
sqlx = "0.8.5"
inventory = "0.3.20"
futures = "0.3.31"
cobalto_derive = { path = "../cobalto_derive" }
